--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/aplicaciondual?sslMode=VERIFY_IDENTITY
-spring.datasource.username=4ssgxo1f4jhhwzv7cpvc
-spring.datasource.password=pscale_pw_8YXXXfyAfjICauwMHogV3YaRgLUt0jtVzqEFtIujg4Q
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:mem:dualdb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=dual
+spring.datasource.password=dual
+spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
