Testeo de edit and show

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 springdoc.swagger-ui.path=/docu
+
+
+
+spring.mvc.format.date=yyyy-MM-dd
